--- a/src/App.css
+++ b/src/App.css
@@ -417,7 +417,7 @@
   border-bottom-right-radius: 40px;
   display: flex;
   flex-direction: row;
-  height: 10vw;
+  height: 9vw;
   justify-content: center;
   padding-block: 0.5vw;
   padding-inline: 2vw;
@@ -451,7 +451,17 @@
 
   .App-Player.home {
     top: 1.8vw;
-    transform: scale(1.6);
+    transform: scale(1.7);
+    height: 10vw;
+    padding-top: 2vw;
+
+  }
+
+  .App-header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 7vw;
+    text-align: center;
   }
 }
 
@@ -507,6 +517,16 @@
   display: flex;
   flex-direction: column;
   width: auto;
+  max-width: 32vw;
+}
+
+@media (min-width: 1440px) {
+  .Container-Music-Title {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    max-width: 60vw;
+  }
 }
 
 .ContainerMusicSpanPlaying {
@@ -516,7 +536,7 @@
   position: relative;
   text-overflow: clip;
   white-space: nowrap;
-  width: 35vw;
+  width: 30vw;
 }
 
 .programaAtual {
@@ -576,10 +596,12 @@
   font-weight: 400;
   margin-left: 0vw;
   padding-right: 100%;
+  max-width: 50vw;
 }
 
 .ContainerMusicSpanPlaying.static {
   animation: none !important;
+
 }
 
 .ContainerMusicSpanPlaying span.static {
@@ -591,10 +613,13 @@
   font-weight: 400;
   margin-left: 0vw;
   padding-right: 0;
+
 }
 
 @keyframes marquee {
-  0%, 50% {
+
+  0%,
+  50% {
     text-indent: 0%;
   }
 
@@ -936,12 +961,13 @@
   .programasImage {
     align-self: flex-start;
     display: flex;
-    height: 9vw;
+    height: 14vw;
     margin-bottom: 6vw;
     margin-left: 5.5vw;
-    margin-top: 6vw;
+    margin-top: 2vw;
     z-index: 5;
   }
+
 }
 
 .textProgImg {
@@ -997,6 +1023,42 @@
   flex-direction: row;
   gap: 11vw;
   height: auto;
+}
+
+@media (max-width: 600px) {
+  .actorImage {
+    display: none;
+  }
+
+  .promoContainer {
+
+    height: 110vw;
+    position: relative;
+  }
+
+  .textProgImg {
+    align-self: flex-start;
+    height: 7vw;
+    margin-left: 7.5vw;
+    z-index: 5;
+    position: absolute;
+    top: 5vw;
+
+  }
+
+  .promoActorRow {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 11vw;
+    height: auto;
+    transform: scale(2.3);
+    -webkit-transform: scale(2.3);
+    -moz-transform: scale(2.3);
+    -ms-transform: scale(2.3);
+    -o-transform: scale(2.3);
+    position: absolute;
+  }
 }
 
 .promoCardBig {
@@ -1188,8 +1250,9 @@
 
 @media (max-width: 600px) {
   .dropsImage {
-    height: 10vw;
+    height: 14vw;
     margin-left: 5.8vw;
+    margin-bottom: 6vw;
   }
 
   .dropsContainerNoticias {
@@ -1610,13 +1673,16 @@
   }
 }
 
+
+
 .center-divPP {
   color: white;
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5vw;
+  font-size: 2vw;
   margin-inline: 2vw;
   text-align: center;
 }
+
 
 .center-divP {
   color: #541084;
@@ -1627,6 +1693,33 @@
 }
 
 @media (max-width: 600px) {
+  .second-news .center-div {
+    align-items: center;
+    background-color: white;
+    border-radius: 8px;
+    border-top: 6px solid #541084;
+    display: flex;
+    height: 24.5vw;
+    justify-content: center;
+    left: 189%;
+    padding-block: 1vw;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 58.5vw;
+    border-radius: 6px;
+    bottom: -44%;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+    border-top: 6px solid transparent;
+    -webkit-transform: ;
+    -moz-transform: ;
+    -ms-transform: ;
+    -o-transform: ;
+    z-index: -1;
+  }
+
   .sub-container img {
     border-radius: 8px;
     height: 25vw;
@@ -1634,15 +1727,149 @@
     width: 41.5vw;
   }
 
+  .first-news .center-divP {
+    color: black;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.3vw;
+    font-weight: 400;
+    margin-inline: 2vw;
+    text-align: center;
+  }
+
+  .first-news .absolute-div {
+    align-items: center;
+    align-self: center;
+    background-color: red;
+    border-radius: 8px;
+    display: flex;
+
+    height: 4vw;
+    justify-content: center;
+    position: absolute;
+    top: -30%;
+    z-index: 5;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    font-weight: 200;
+    width: auto;
+    padding: 2.5vw;
+
+  }
+
+  .first-news .center-divPP {
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.8vw;
+    margin-inline: 2vw;
+    text-align: center;
+  }
+
+  .second-news .center-divPP {
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.3vw;
+    margin-inline: 2.5vw;
+
+    text-align: center;
+    font-weight: 200;
+    padding-block: 1vw;
+  }
+
+  .second-news .center-divP {
+    color: black;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3.7vw;
+    margin-left: 4vw;
+    text-align: left;
+    font-weight: 200;
+  }
+
+  .second-news .absolute-div {
+    align-items: center;
+    background-color: red;
+    border-radius: 8px;
+    display: flex;
+    height: 100%;
+    height: 3vw;
+    justify-content: center;
+    position: absolute;
+    top: -4vw;
+    align-self: center;
+    z-index: 5;
+    width: auto;
+    padding: 1vw;
+    padding-block: 2.4vw;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    transform: translate(0%, 0%);
+    -webkit-transform: translate(0%, 0%);
+    -moz-transform: translate(0%, 0%);
+    -ms-transform: translate(0%, 0%);
+    -o-transform: translate(0%, 0%);
+  }
+
   .container {
     display: flex;
+    flex-direction: column;
     gap: 5vw;
     justify-content: space-between;
+  }
+
+  .first-news img {
+    border-radius: 8px;
+    height: 57vw;
+    object-fit: cover;
+    width: 87.5vw;
+
+  }
+
+  .first-news {
+    width: 87.5vw;
+    margin-bottom: 1.5vw;
+  }
+
+  .second-news {
+    width: 30.5vw;
+
+  }
+
+  .second-news img {
+    width: 30.5vw;
+
   }
 
   .center-div {
     border-radius: 6px;
     bottom: -27%;
+  }
+
+  .first-news .center-div {
+    height: 12vw;
+    border-radius: 8px;
+    bottom: -12%;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    border-top: 6px solid red;
+  }
+
+
+}
+
+@media (max-width: 466px) {
+  .second-news .center-div {
+    bottom: -42%;
+  }
+}
+
+@media (max-width: 316px) {
+  .second-news .center-div {
+    bottom: -41%;
   }
 }
 
@@ -1651,8 +1878,20 @@
 .play-circle {
   color: white;
   height: 6vw;
-  margin-right: 2vw;
+  margin-right: 1vw;
   width: 6vw;
+}
+
+@media (max-width: 600px) {
+
+  .home .play-circle {
+    padding-right: 0vw;
+    margin-left: 0vw;
+  }
+
+  .home .home .ContainerMusicSpanPlaying {
+    width: 0vw;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -1663,6 +1902,7 @@
     height: 5vw;
     width: 5vw;
   }
+
 }
 
 .circle-container {
