--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -382,7 +382,7 @@ h3 {
 .meu-conteudo a {
     color: #541084;
     font-family: 'Rubik', sans-serif;
-    font-size: 1vw;
+  
     font-style: normal;
     font-weight: 400;
     line-height: 107.835%;
@@ -505,21 +505,22 @@ h3 {
     justify-content: center;
     align-items: center;
     height: 5vw;
-    width: 28vw;
-    margin-top: 5vw;
+    width: 29vw;
+    margin-top: 2vw;
     background-color: #541084;
-    border-radius: 24px;
+    border-radius: 5px;
     padding-inline: 1vw;
     margin-left: 5vw;
-
     color: #FFF;
-
     font-family: 'Rubik', sans-serif;
     font-size: 3.4vw;
-
     font-style: normal;
     font-weight: 700;
     margin-bottom: 7vw;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .containerDivisao {
