--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1,8 +1,10 @@
+.MenuContainerHeader {}
+
 :root {
     --cor-primaria: #DC143C;
     --cor-primaria-clara: #E26A6E;
 
-    /* --cor-primaria: #541084; */
+    /* --cor-primaria:  #541084; */
     /* --cor-primaria-clara: #8D1B94; */
     --cor-secundaria: #FFC007;
     --cor-terciaria: white;
@@ -10,9 +12,6 @@
     --cor-backgroundClaro: #FFC300;
     --cor-backgroundEscuro: #FF5733;
 }
-
-
-.MenuContainerHeader {}
 
 .App-headerN {
     display: flex;
@@ -117,14 +116,15 @@
 
 .ContainerRow.sidebar-open {
     flex-direction: column;
-    background: linear-gradient(to bottom, var(--cor-primaria) 21%, var(--cor-primaria-clara) 70%, transparent 100%);
+    background: linear-gradient(to bottom, var(--cor-primaria), var(--cor-secundaria) 0%, transparent 100%);
     width: 100%;
     position: absolute;
     top: -5vw;
     width: 100%;
-    height: 98vw;
+    height: 78vw;
     z-index: 20;
-    padding-bottom: 0vw;
+    padding-bottom: vw;
+   
 }
 
 .ContainerRow.sidebar-open span {
@@ -146,7 +146,7 @@
 }
 
 .dropsImage.sidebar-open {
-    margin-top: 76vw;
+    margin-top: 67vw;
 }
 
 .InnerContainerRow {
@@ -201,8 +201,6 @@
     padding: 0;
 }
 
-
-
 .App-header.sidebar-open img {
     width: 30vw;
     height: 15vw;
@@ -214,8 +212,15 @@
 
 .xSvg {
     position: absolute;
-    top: 28vw;
-    right: 12vw;
+    top: 18vw;
+    right: 5vw;
+}
+
+@media (min-width: 600px) {
+    .xSvg {
+        top: 28vw;
+        right: 13vw;
+    }
 }
 
 .App-header.sidebar-open .InnerContainerRow {
@@ -396,13 +401,9 @@ h3 {
 }
 
 .meu-conteudo a {
-    color: var(--cor-text);
+    color: var(--cor-primaria);
     font-family: 'Rubik', sans-serif;
-<<<<<<< Updated upstream
-    font-size: 1vw;
-=======
 
->>>>>>> Stashed changes
     font-style: normal;
     font-weight: 400;
     line-height: 107.835%;
@@ -443,7 +444,7 @@ h3 {
 }
 
 .meu-conteudo strong {
-    color: var(--cor-primaria);
+    color: var(--cor-text);
     font-family: 'Rubik', sans-serif;
     font-size: 2.1vw;
 
@@ -525,17 +526,10 @@ h3 {
     justify-content: center;
     align-items: center;
     height: 5vw;
-<<<<<<< Updated upstream
-    width: 28vw;
-    margin-top: 5vw;
-    background-color: #541084;
-    border-radius: 24px;
-=======
     width: 29vw;
     margin-top: 2vw;
     background-color: var(--cor-primaria);
     border-radius: 5px;
->>>>>>> Stashed changes
     padding-inline: 1vw;
     margin-left: 5vw;
 
@@ -766,7 +760,7 @@ h3 {
     margin: 0 0;
     font-family: 'Rubik', sans-serif;
     font-size: 2vw;
-    color: var(--cor-primaria);
+    color: var(--cor-text);
     font-style: normal;
     font-weight: 400;
     width: 85%;
@@ -853,7 +847,7 @@ h3 {
         background-color: white;
         margin-bottom: 1vw;
         padding-bottom: 0.4vw;
-        height: 3vw;
+
         border-bottom-left-radius: 24px;
     }
 
@@ -1034,16 +1028,5 @@ h3 {
         margin-left: 4vw;
         left: 4vw;
         top: 0vw;
-    }
-
-    .sidebar-open.App-header img:first-child {
-        width: auto;
-        height: 35vw;
-        z-index: 22;
-        margin-right: 46vw;
-        margin-left: 4vw;
-        left: 4vw;
-        top: 0vw;
-
     }
 }
