--- a/src/NoticiaDetalhe.css
+++ b/src/NoticiaDetalhe.css
@@ -1,11 +1,11 @@
 .MenuContainerHeader {}
 
 :root {
-    --cor-primaria: #DC143C;
-    --cor-primaria-clara: #E26A6E;
+    /* --cor-primaria: #DC143C;
+    --cor-primaria-clara: #E26A6E; */
 
-    /* --cor-primaria:  #541084; */
-    /* --cor-primaria-clara: #8D1B94; */
+    --cor-primaria: #541084;
+    --cor-primaria-clara: #8D1B94;
     --cor-secundaria: #FFC007;
     --cor-terciaria: white;
     --cor-text: black;
@@ -199,6 +199,15 @@
     background: none;
     border: none;
     padding: 0;
+    background-color: var(--cor-primaria);
+
+    width: 15vw;
+    height: 9vw;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    position: relative;
+    top: -8.8vw;
+    left: 2vw;
 }
 
 .App-header.sidebar-open img {
@@ -210,10 +219,25 @@
     padding-top: 17vw;
 }
 
+.line-container {
+    margin-left: 3vw;
+
+}
+
+.line-container .line {
+    height: 2.5px;
+    border-radius: 1px;
+    background-color: var(--cor-terciaria);
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -ms-border-radius: 1px;
+    -o-border-radius: 1px;
+}
+
 .xSvg {
     position: absolute;
-    top: 18vw;
-    right: 5vw;
+    top: 20.5vw;
+    right: 12vw;
 }
 
 @media (min-width: 600px) {
@@ -260,6 +284,7 @@
     top: 3vw;
 
 }
+
 
 @media (min-width: 320px) {
     .App-headerN img {
@@ -314,7 +339,8 @@
     border-radius: 10px;
     width: auto;
     /* Substitua pelo valor desejado */
-    height: 30vw;
+    height: 25vw;
+    width: 52vw;
 }
 
 @media (max-width: 600px) {
@@ -364,6 +390,16 @@ h2 {
     opacity: 0.99;
 }
 
+@media (min-width: 601px) {
+    h2 {
+        font-size: 1.5vw;
+    }
+
+    h1 {
+        font-size: 1.7vw;
+    }
+}
+
 h3 {
     color: var(--cor-text);
 
@@ -408,6 +444,7 @@ h3 {
     font-weight: 400;
     line-height: 107.835%;
     text-decoration-line: none;
+    text-align: center;
 }
 
 .meu-conteudo img {
@@ -434,7 +471,7 @@ h3 {
     font-style: normal;
     font-weight: 200;
     line-height: normal;
-    text-align: left;
+
     margin-top: 1vw;
 }
 
@@ -451,8 +488,12 @@ h3 {
     font-style: normal;
     font-weight: 400;
     line-height: 107.835%;
+    text-align: center;
 }
 
+.has-text-align-center {
+    text-align: center;
+}
 
 .social-share-container {
     display: flex;
@@ -688,8 +729,8 @@ h3 {
 }
 
 .noticia img {
-    width: 20vw;
-    height: 20vw;
+    width: 32vw;
+    height: 22vw;
     object-fit: cover;
     margin-right: 10px;
 }
@@ -819,6 +860,17 @@ h3 {
 
 }
 
+.noticiaDetalheDiv {
+    background-color: whitesmoke !important;
+}
+
+.meu-conteudo blockquote {
+    /* Adicione suas regras de estilo aqui */
+    border-left: 5px solid #ccc;
+    padding-left: 20px;
+    color: #666;
+}
+
 @media (min-width: 1440px) {
     .App-header img:first-child {
         margin-right: 0vw;
@@ -837,6 +889,8 @@ h3 {
         align-items: center;
         padding-top: 3vw;
     }
+
+
 
     .ContainerRow {
         margin-left: 4vw;
@@ -1026,7 +1080,8 @@ h3 {
         z-index: 22;
         margin-right: 42vw;
         margin-left: 4vw;
-        left: 4vw;
-        top: 0vw;
+        left: 1vw;
+        top: -2vw;
+        position: relative;
     }
 }
